--- a/DanfossHeating/Views/MainWindow.axaml
+++ b/DanfossHeating/Views/MainWindow.axaml
@@ -8,7 +8,7 @@
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
         x:Class="DanfossHeating.Views.MainWindow"
         x:DataType="vm:MainWindowViewModel"
-        Icon="/Assets/Danfoss-logo-red.png"
+        Icon="/Assets/logo.ico"
         Title="DanfossHeating">
 
     <Window.Resources>
